--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           go-version: '1.21.4'
+
       - name: Install dependencies
-      - run: go get .
+        run: go get .
       - name: Build
-      - run: go build 
-      - name: Run
-      - run: ./user-register-api
+        run: go build -v ./...
       - name: Test with the Go CLI
-      - run: go test
+        run: go test
   
