--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           go-version: '1.21.4'
 
       - name: Install dependencies
-        run: go get .
+        run: go mod tidy
       - name: Build
         run: go build -v ./...
       - name: Test with the Go CLI
