--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ jobs:
 
       - name: Install dependencies
         run: go mod tidy
-      - name: Build
-        run: go build -v ./...
+      - name: Run Server
+        run: go run main.go
       - name: Test with the Go CLI
         run: go test
   
