--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,8 @@ jobs:
         with:
           go-version: '1.21.4'
 
-      - name: Install dependencies
-        run: go mod tidy
-      - name: Run Server
-        run: |
-          nohup go run main.go &
-          sleep 5
+      - name: Run docker container and server
+        run: docker-compose up -d
       - name: Test with the Go CLI
         run: go test
   
