--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,9 @@ jobs:
       pull-requests: write
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-go@v4
-        with:
-          go-version: '1.21.5'
-
+      
       - name: Run docker container and server
         run: docker-compose up -d & sleep 5
       - name: Test with the Go CLI
-        run: go test
+        run: docker-compose exec server go test -v ./...
   
