テストでのTTYを無効化する

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,5 @@ jobs:
       - name: Run docker container and server
         run: docker-compose up -d & sleep 10
       - name: Test with the Go CLI
-        run: docker-compose exec server go test -v ./...
+        run: docker-compose exec -T server go test -v ./...
   
