--- a/document.yaml
+++ b/document.yaml
@@ -42,7 +42,7 @@ paths:
                 required: true
               username:
                 type: "string"
-              passwork:
+              password:
                 type: "string"
                 required: true
 
@@ -91,7 +91,7 @@ paths:
           schema:
             type: "object"
             properties:
-              passwork:
+              password:
                 type: "string"
 
       responses:
@@ -139,7 +139,7 @@ paths:
             properties:
               username:
                 type: "string"
-              passwork:
+              password:
                 type: "string"
 
       responses:
@@ -187,7 +187,7 @@ paths:
           schema:
             type: "object"
             properties:
-              passwork:
+              password:
                 type: "string"
       
       responses:
