--- a/document.yaml
+++ b/document.yaml
@@ -132,11 +132,23 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: "User does not exist"
+                oneOf:
+                  - $ref: '#/components/responses/UnauthorizedError'
+                  - $ref: '#/components/responses/PassIncorrectError'
+                  - $ref: '#/components/responses/UserDoesNotExistError'
+              examples:
+                response1:
+                  summary: Bodyが存在しない又は形式が正しくない場合
+                  value:
+                    message: Unauthorized
+                response2:
+                  summary: パスワードが正しくない場合
+                  value:
+                    message: Password is incorrect
+                response3:
+                  summary: 存在しないユーザーIDの場合
+                  value:
+                    message: User does not exist
     put:
       tags:
         - user
@@ -184,11 +196,10 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: "User does not exist"
+                oneOf:
+                  - $ref: '#/components/responses/UnauthorizedError'
+                  - $ref: '#/components/responses/PassIncorrectError'
+                  - $ref: '#/components/responses/UserDoesNotExistError'
 
   /delete/{user_id}:
     delete:
@@ -244,6 +255,15 @@ components:
             message:
               type: string
               example: "Unauthorized"
+    PassIncorrectError:
+      type: object
+      properties:
+        pass_incorrect:
+          type: object
+          properties:
+            message:
+              type: string
+              example: "Password is incorrect"
     UserAlreadyExistsError:
       type: object
       properties:
@@ -253,3 +273,12 @@ components:
             message:
               type: string
               example: "User already exists"
+    UserDoesNotExistError:
+      type: object
+      properties:
+        user_does_not_exist:
+          type: object
+          properties:
+            message:
+              type: string
+              example: "User does not exist"
