ユーザー削除のfailed requestの条件を複数設定

--- a/document.yaml
+++ b/document.yaml
@@ -247,15 +247,27 @@ paths:
                     type: string
                     example: "User can be deleted"
         400:
-          description: パスワードが正しくない場合や存在しないユーザーIDの場合
+          description: Failed responses
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: "User does not exist"
+                oneOf:
+                  - $ref: '#/components/responses/UnauthorizedError'
+                  - $ref: '#/components/responses/PassIncorrectError'
+                  - $ref: '#/components/responses/UserDoesNotExistError'
+              examples:
+                response1:
+                  summary: Bodyが存在しない又は形式が正しくない場合
+                  value:
+                    message: Unauthorized
+                response2:
+                  summary: パスワードが正しくない場合
+                  value:
+                    message: Password is incorrect
+                response3:
+                  summary: 存在しないユーザーIDの場合
+                  value:
+                    message: User does not exist
 
 components:
   responses:
