--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
       dockerfile: Dockerfile
     volumes:
       - .:/app
+    tty: true
     ports:
       - 8080:8080
-    command: go run main.go
 
   db:
     image: mysql:8.2
