--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,11 @@ services:
       - 8080:8080
 
   db:
-    image: mysql:8.2
+    build:
+      context: db/
+      dockerfile: Dockerfile
+    volumes:
+      - ./db/initdb.d:/docker-entrypoint-initdb.d
     ports:
       - 3306:3306
     environment:
